tests/expectations/compiler/constants/global_shadowing_constant_fail.out
DCE_ENABLED:
Error [EAST0372009]: variable `HELLO` shadowed by
    --> compiler-test:4:11
     |
   4 |     const HELLO: u8 = 1u8;
     |           ^^^^^

DCE_DISABLED:
Error [EAST0372009]: variable `HELLO` shadowed by
    --> compiler-test:4:11
     |
   4 |     const HELLO: u8 = 1u8;
     |           ^^^^^
